Bug 154972 - MSN Contact pictures and custom emoticons are not displayed
Summary: MSN Contact pictures and custom emoticons are not displayed
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: MSN Plugin (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 155933 155935 156091 157302 166248 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-01-02 14:55 UTC by Luca Venturini
Modified: 2008-07-15 19:59 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kopete console log (7.29 KB, text/plain)
2008-07-11 10:49 UTC, Kristjan Ugrin
Details
kopete crash report on changing avatar (7.83 KB, text/plain)
2008-07-11 22:26 UTC, carlo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Venturini 2008-01-02 14:55:25 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc 4:4.1.2-9ubuntu2 
OS:                Linux

The only loaded plugin is the History one. The bug is simple enough to reproduce: this IM application is not able to display the pictures of MSN contacts, and when one of those contacts sends a custom emoticon, this is not displayed. This extends to the contact list - if the contact has added an emoticon into the alias, such as (6) , or if the alias contains html-like information such as putting the alias in italic or bold, kopete just displays the code lines and does not modify the alias itself.
Comment 1 Luca Venturini 2008-01-02 17:24:24 UTC
This is the konsole output of a kopete session during which I did use an MSN account, also to speak with a MSN contact who sent me custom emoticons. I hope it might help.

luca@luca-laptop:~$ cd /opt/kde4/bin/
luca@luca-laptop:/opt/kde4/bin$ ./kopete
QObject::connect: Connecting from COMPAT signal (KAction::activated())
kopete(14114)/libkopete Kopete::PluginManager::loadPluginInternal: Unable to fin
d a plugin named ' "" '!
luca@luca-laptop:/opt/kde4/bin$ MMX: 1, SSE: 1, SSE2: 1, MMX-SSE: 1, 3dNow: 0, 3
dNow+: 0

luca@luca-laptop:/opt/kde4/bin$ ./kopete
QObject::connect: Connecting from COMPAT signal (KAction::activated())
kopete(14175)/libkopete Kopete::PluginManager::loadPluginInternal: Unable to fin
d a plugin named ' "" '!
luca@luca-laptop:/opt/kde4/bin$ MMX: 1, SSE: 1, SSE2: 1, MMX-SSE: 1, 3dNow: 0, 3
dNow+: 0
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
QFSFileEngine::open: No file name specified
QPixmap::fromImage: Cannot convert a null image
X Error: BadWindow (invalid Window parameter) 3
  Major opcode: 20 (X_GetProperty)
  Resource id:  0x2808c64
QPixmap::fromImage: Cannot convert a null image
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
QPixmap::fromImage: Cannot convert a null image
kopete(14175)/kopete (msn) MSNSocket::slotSocketError: Error:  17  ( "connession
e chiusa dall'host remoto" )
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
QPixmap::fromImage: Cannot convert a null image
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
QPixmap::fromImage: Cannot convert a null image
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
X Error: BadWindow (invalid Window parameter) 3
  Major opcode: 20 (X_GetProperty)
  Resource id:  0x28255a9
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
kopete(14175) KXMLGUIClient::setXMLFile: KXMLGUIClient::setXMLFile: cannot find
.rc file  "kopeterichtexteditpartfull.rc"
Enchant dict for "it" 0x8c2f250
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
Object::connect: No such signal MSNChatSession::invitation(MSNInvitation*&,QStri
ng,long unsigned int,MSNChatSession*,MSNContact*)
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
QPixmap::fromImage: Cannot convert a null image
luca@luca-laptop:/opt/kde4/bin$    
Comment 2 Charles Connell 2008-01-17 02:00:15 UTC
*** Bug 155933 has been marked as a duplicate of this bug. ***
Comment 3 Charles Connell 2008-01-17 02:00:35 UTC
*** Bug 155935 has been marked as a duplicate of this bug. ***
Comment 4 Charles Connell 2008-01-27 02:06:22 UTC
*** Bug 156091 has been marked as a duplicate of this bug. ***
Comment 5 Luca Vitucci 2008-02-07 23:08:03 UTC
*** This bug has been confirmed by popular vote. ***
Comment 6 Roman Jarosz 2008-02-14 21:02:42 UTC
SVN commit 775053 by rjarosz:

Fix bug 154972: MSN Contact pictures and custom emoticons are not displayed

This will probably fix other problems too because for QDataStreams we were using Qt 3.1 version which
didn't write int64 correctly.

BUG: 154972



 M  +2 -2      dispatcher.cpp  
 M  +2 -2      messageformatter.cpp  
 M  +1 -1      msnchallengehandler.cpp  
 M  +5 -1      msncontact.cpp  
 M  +1 -1      msnp2pdisplatcher.cpp  
 M  +1 -1      msnsocket.cpp  
 M  +6 -1      msnswitchboardsocket.cpp  
 M  +2 -2      webcam.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=775053
Comment 7 Roman Jarosz 2008-02-14 21:06:51 UTC
SVN commit 775055 by rjarosz:

Backport fix for bug 154972: MSN Contact pictures and custom emoticons are not displayed

This will probably fix other problems too because for QDataStreams we were using Qt 3.1 version which
didn't write int64 correctly.

CCBUG: 154972



 M  +2 -2      dispatcher.cpp  
 M  +2 -2      messageformatter.cpp  
 M  +1 -1      msnchallengehandler.cpp  
 M  +5 -1      msncontact.cpp  
 M  +1 -1      msnp2pdisplatcher.cpp  
 M  +1 -1      msnsocket.cpp  
 M  +6 -1      msnswitchboardsocket.cpp  
 M  +2 -2      webcam.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=775055
Comment 8 Roman Jarosz 2008-02-14 21:10:08 UTC
*** Bug 157302 has been marked as a duplicate of this bug. ***
Comment 9 Christophe Marin 2008-02-15 10:53:10 UTC
Are you sure the issue is resolved ? 

For what I could see with rev. 775249, only two MSN contacts pictures are displayed. 
avatarconfig.rc mentions they're both in «Category=2». What is it ? 

in MSN account options, «Download the MSN picture» still resets to default "when a chat is open".
Comment 10 Roman Jarosz 2008-02-15 13:06:15 UTC
SVN commit 775292 by rjarosz:

Save settings from account preferences tab.

CCBUG: 154972



 M  +8 -2      msnchatsession.cpp  
 M  +6 -0      ui/msneditaccountui.ui  
 M  +13 -0     ui/msneditaccountwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=775292
Comment 11 Roman Jarosz 2008-02-15 13:07:03 UTC
SVN commit 775294 by rjarosz:

Backport commit 775292. Save settings from account preferences tab.

CCBUG: 154972



 M  +8 -2      msnchatsession.cpp  
 M  +6 -0      ui/msneditaccountui.ui  
 M  +13 -0     ui/msneditaccountwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=775294
Comment 12 Roman Jarosz 2008-02-15 13:12:53 UTC
Krop: Category=2 is just internal Kopete category (IIRC it's means that this is contact photo).

All settings in msn account preferences tab weren't saved this should be fixed now.
Comment 13 Christophe Marin 2008-02-15 13:38:50 UTC
Thank you. Settings are now saved but avatars are still not downloaded. I realize now that the two avatars Kopete catched yesterday were Macintosh users' pictures.

Running kopete from a console didn't show any message, sorry.
Comment 14 Roman Jarosz 2008-02-15 13:57:12 UTC
I'm not MSN developer so I can be wrong but it looks like photos can only by downloaded from online contacts.

And also you probably have in ~/.kde/share/apps/kopete/contactlist.xml wrong pathes to photos and MSN thinks that you already have the photos. If you quit Kopete, rename or move contactlist.xml and then start it does it work?
Comment 15 Christophe Marin 2008-02-15 14:36:25 UTC
Done. I renamed share/apps/kopete and launched kopete. The avatars/Contacts/<subdir> were re-created for my ICQ & jabber accounts after going online but not for the MSN one.

- I did create it manually and asked an online contact to change his avatar : no effect,
- in the chat window, I tried Chat/Request Display Picture : no effect.

No picture was downloaded, avatarconfig.rc wasn't created.

Here's the contactlist.xml infos for this contact :

    <meta-contact contactId="MSNProtocol:my_msn_address:his_msn_address" >
        <display-name></display-name>
        <photo syncWithKABC="false" ></photo>
        <property-sources>
            <name source="contact" >
                <contact-source nameSourceContactId="his_msn_address" nameSourcePluginId="MSNProtocol" nameSourceAccountId="my_msn_address" />
            </name>
            <photo source="contact" >
                <contact-source nameSourceContactId="his_msn_address" nameSourcePluginId="MSNProtocol" nameSourceAccountId="my_msn_address" />
            </photo>
        </property-sources>
        <groups>
            <group id="1" />
        </groups>
        <plugin-data plugin-id="MSNProtocol" >
            <plugin-data-field key="PHH" ></plugin-data-field>
            <plugin-data-field key="PHM" ></plugin-data-field>
            <plugin-data-field key="PHW" ></plugin-data-field>
            <plugin-data-field key="accountId" >my_msn_address</plugin-data-field>
            <plugin-data-field key="contactGuid" >[cut string]</plugin-data-field>
            <plugin-data-field key="contactId" >his_msn_address</plugin-data-field>
            <plugin-data-field key="displayName" >...</plugin-data-field>
            <plugin-data-field key="groups" >[cut string]</plugin-data-field>
            <plugin-data-field key="lists" >CAR</plugin-data-field>
            <plugin-data-field key="obj" >&lt;msnobj Creator="his_msn_address" Size="23503" Type="3" Location="TFR7F.dat" Friendly="AAA=" SHA1D="[cut string]=" SHA1C="[cut string]="/></plugin-data-field>
            <plugin-data-field key="prop_QString_emailAddress" >his_msn_address</plugin-data-field>
            <plugin-data-field key="prop_QString_guid" >[cut string]</plugin-data-field>
            <plugin-data-field key="prop_QString_nickName" >...</plugin-data-field>
        </plugin-data>
    </meta-contact>
Comment 16 Christophe Marin 2008-02-15 14:40:41 UTC
(the " &lt;msnobj Creator " appears like this in the xml file, I guess it should be changed)
Comment 17 Giovanni Venturi 2008-02-15 15:05:42 UTC
so this bug is not fixed, is it? Can I reopen it?
Comment 18 Roman Jarosz 2008-02-15 16:07:51 UTC
Well it works here when I change the photo in other Kopete.

Krop: Could you try if Kopete 0.12 can download the photos that Kopete 0.50 can't?
Comment 19 Christophe Marin 2008-02-15 17:28:09 UTC
Kopete 0.12 = Kopete for KDE 3.5.8 ? If yes, I did test it yesterday and it was downloading the pictures in share/apps/kopete/msnpictures.

---

Just to mention : my two Mac users came online today. One for sure is using amsn. Their pictures were both downloaded and displayed in the contact list (I'm using the detailed view).

There's a difference in contactlist.xml : 

MSN users : 

<plugin-data-field key="lists" >CAR</plugin-data-field> 
<plugin-data-field key="obj" >&lt;msnobj Creator="his_msn_address" Size="23503" Type="3" Location="TFR7F.dat" Friendly="AAA=" SHA1D="[cut string]=" SHA1C="[cut string]="/></plugin-data-field> 
<plugin-data-field key="prop_QString_emailAddress" >his_msn_address</plugin-data-field> 

Mac users with AMSN : 
<plugin-data-field key="lists" >CAR</plugin-data-field>
<plugin-data-field key="obj" ></plugin-data-field> <==== 
<plugin-data-field key="prop_QString_emailAddress" >Contact_address</plugin-data-field>

Comment 20 Roman Jarosz 2008-02-15 22:22:20 UTC
SVN commit 775453 by rjarosz:

Add missing null character, this fixes photo downloading from offcial MSN client.

CCBUG: 154972



 M  +1 -2      p2p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=775453
Comment 21 Roman Jarosz 2008-02-15 22:22:48 UTC
SVN commit 775454 by rjarosz:

Backport commit 775453.
Add missing null character, this fixes photo downloading from offcial MSN client.

CCBUG: 154972



 M  +1 -2      p2p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=775454
Comment 22 Christophe Marin 2008-02-15 22:36:28 UTC
Confirmed :-) Thank you.
Comment 23 Christophe Marin 2008-04-07 17:31:31 UTC
To SVN users : Don't you observe a regression ? When Roman worked on this bug, I had maybe two or three MSN contacts without picture displayed.

Now, half of my contact have buggy pictures (at least, kopete doesn't display them while amsn has no problem with them).

I tried deleting $HOME/.kde/share/apps/kopete a few times without observing any evolution.
Comment 24 Giovanni Venturi 2008-04-09 21:50:49 UTC
The bug is still there. At least in kde trunk 9th April 2008
Comment 25 Kristjan Ugrin 2008-07-03 10:22:18 UTC
I think I suffer from same issue. Kopete 0.50.80 

Some contacts don't have avatars (quite many) - KDE4.1 from openSuSE factory repository. 
If I go to kopete pref. directory (~/.kde4/share/apps/kopete/avatars/Contacts/{mail}/) I can see blank png images inside instead of avatars (some contacts avatars works fine though).
Comment 26 Carlo Segato 2008-07-03 12:39:06 UTC
the blank avatar bug is solved, but some avatars can't be fetched correctly for example I can't get an avatar from a pidgin user or amsn, but it works with other kopete 0.50 and windows live 8.5, I'll look into this if I can find a solution
Comment 27 Kristjan Ugrin 2008-07-03 12:44:08 UTC
Then I'll wait for package updates.
Comment 28 Chris Fordham 2008-07-07 14:25:14 UTC
My behaviour seems the same as what users above are reporting as still outstanding.
Some contact avatars are coming through as blank transparent and some still do not come through at all and it does seem to be client dependent.

This bug needs attention, but if fixed will make a lot of people happy and MSN adequately useable.
Comment 29 Rui G. 2008-07-07 23:13:56 UTC
Custom emoticons are still not displayed in kopete 0.5.80 , but I still don't know if the same happens with MSN Contact pictures. What happens with Live messenger is that it can't see the contact picture defined in kopete, maybe it's related.
Comment 30 carlo 2008-07-08 01:12:18 UTC
I have this problem with msn account. I got a friend to change the display picture to a default msn one and it was ok, but when she changed it back it disappeared again. the thing is the one that didnt display was a custom picture that was chosen from an old pc. she no longer has the photo on her current pc but she can still use it, perhaps its on msn's server or something, but it cant be displayed on mine. does this have something to do with it?
Comment 31 Christophe Marin 2008-07-10 19:36:15 UTC
*** Bug 166248 has been marked as a duplicate of this bug. ***
Comment 32 Kristjan Ugrin 2008-07-11 10:49:53 UTC
Created attachment 26035 [details]
kopete console log

Reposting test case comment, since I duplicated this bug:
---
I've built Kopete from trunk svn rev. 830441 and I'm not seeing all contacts
avatars (set to download them automatically). One of contacts is using Live
messenger, so I tried to replicate this problem via virtual machine with Live
msn, but failed (kopete was showing avatar from second account properly). 

However I captured log from console while manually requesting two avatars,
amongst contacts which seems to be problematic (has to do something with p2p). 


Note: this contacts do have avatars and are being properly shown in kopete for
KDE3.
---
Comment 33 carlo 2008-07-11 22:26:24 UTC
Created attachment 26043 [details]
kopete crash report on changing avatar

This is a crash report kopete. I was logged on in a vm and in kopete. It
crashed whilst changing the avatar, from kopete. If this helps then great. If
someone needs more info about what I was doing exactly then tell me. It
happened twice in a row so I can probably do it again.
Comment 34 Carlo Segato 2008-07-11 22:54:58 UTC
the backtrace is useless without debugging symbols, and don't attach but paste it as a comment
Comment 35 Christophe Marin 2008-07-11 23:09:56 UTC
And open a new bug since this one doesn't make anything crash.
Comment 36 carlo 2008-07-12 10:11:36 UTC
OK, Thanks.
Comment 37 Kristjan Ugrin 2008-07-14 15:35:21 UTC
This seems to be fixed in trunk, as for revision 832356.
Comment 38 Carlo Segato 2008-07-15 19:59:40 UTC
*** Bug has been marked as fixed ***.