Fix bug 154972: MSN Contact pictures and custom emoticons are not displayed

This will probably fix other problems too because for QDataStreams we were using Qt 3.1 version which
didn't write int64 correctly.

BUG: 154972


svn path=/trunk/KDE/kdenetwork/kopete/; revision=775053