protocols/msn/dispatcher.cpp
@@ -129,7 +129,7 @@ void Dispatcher::sendFile(const QString& path, qint64 fileSize, const QString& t
 
 	QByteArray header(638, '\0');
 	QDataStream writer( &header,QIODevice::WriteOnly);
-	writer.setVersion(QDataStream::Qt_3_1);
+	writer.setVersion(QDataStream::Qt_3_3);
 	writer.setByteOrder(QDataStream::LittleEndian);
 
 	// Write the header length to the stream.
@@ -460,7 +460,7 @@ void Dispatcher::dispatch(const P2P::Message& message)
 				// Decode the file context from base64 encoding.
                                 context = QByteArray::fromBase64(regex.cap(1).toUtf8());
 				QDataStream reader( &context,QIODevice::ReadOnly);
-				reader.setVersion(QDataStream::Qt_3_1);
+				reader.setVersion(QDataStream::Qt_3_3);
 				reader.setByteOrder(QDataStream::LittleEndian);
 				//Retrieve the file info from the context field.
 				// File Size [8..15] Int64
